--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,9 @@ services:
       - database1
       - database2
   php1:
-    image: php:7-fpm
+    build: 
+      context: ./dockerfiles
+      dockerfile: Dockerfile-php1
     container_name: "projet_php1"
     volumes:
       - ./app1:/code/app1
@@ -36,7 +38,9 @@ services:
     links:
       - database1:db
   php2:
-    image: php:7-fpm
+    build: 
+      context: ./dockerfiles
+      dockerfile: Dockerfile-php1
     container_name: "projet_php2"
     volumes:
       - ./app2:/code/app2
