--- a/dockerfiles/Dockerfile-php1
+++ b/dockerfiles/Dockerfile-php1
@@ -1,7 +1,2 @@
-FROM php:7-fpm
-
-RUN apt-get update && apt-get install -y \
-        libfreetype6-dev \
-        libjpeg62-turbo-dev \
-        libmcrypt-dev \
-        libpng12-dev
+FROM php:7.1-fpm
+RUN docker-php-ext-install pdo pdo_mysql
