--- a/dockerfiles/Dockerfile-php2
+++ b/dockerfiles/Dockerfile-php2
@@ -1,6 +1,2 @@
-FROM php:7-fpm
-
-RUN apt-get update && apt-get install -y \
-        libfreetype6-dev \
-        libjpeg62-turbo-dev \
-        libmcrypt-dev
+FROM php:7.1-fpm
+RUN docker-php-ext-install pdo pdo_mysql
