--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,10 @@ server {
     listen 8080;
     index index.php index.html;
     server_name localhost;
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+
+    error_log  /var/log/nginx/app1_error.log;
+    access_log /var/log/nginx/app1_access.log;
+
     root /code/app1;
 
     location ~ \.php$ {
@@ -22,8 +24,8 @@ server {
     index index.php index.html;
     server_name localhost;
 
-    error_log  /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    error_log  /var/log/nginx/app2_error.log;
+    access_log /var/log/nginx/app2_access.log;
 
     root /code/app2;
 
